# Parallel_Regression

./: CMakeLists.txt  ForParallelRegression.cpp  ForParallelRegression.h  ForParallelRegressionSTL.cpp  ForParallelRegressionSTL.h  InputHandler.cpp  InputHandler.h  MainWindow.cpp  MainWindow.h  Point.cpp  Point.h  SerialLinearRegression.cpp  SerialLinearRegression.h  SerialLinearRegressionSTL.cpp  SerialLinearRegressionSTL.h  TaskParallelRegression.cpp  TaskParallelRegression.h  TaskParallelRegressionSTL.cpp  TaskParallelRegressionSTL.h  forParallelRegression.cpp  forParallelRegression.h  generator.py  main.cpp  qcustomplot.cpp  qcustomplot.h
